--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<div>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
     <a class="navbar-brand" href="#">
       Brand
     </a>
@@ -21,5 +22,10 @@
       </ul>
     </div>
   </nav>
+  
+  <!-- container margin top - 3 -->
+  <div class="container mt-3"> 
+    <router-outlet></router-outlet>
+  </div>
 
-<router-outlet></router-outlet>
+</div>
