--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,24 @@
+.navbar{
+    background-color: #6A007A;
+}
+
 .navbar-brand
 {
     padding: 0.5rem 2rem;
+}
+.nav-item
+{
+    padding-left: 33px;
+}
+/* button
+{
+    outline: none;
+    box-shadow: none;
+} */
+
+.containerWidth
+{
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
