--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
+  <nav class="navbar navbar-expand-md navbar-dark">
     <a class="navbar-brand" href="#">
-      Brand
+      shareExp
     </a>
   
     <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
@@ -12,19 +12,23 @@
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
       
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item pl-4">
           <a routerLink="expList" class="nav-link">Home</a>
         </li>
   
-        <li class="nav-item">
+        <li class="nav-item pl-4">
           <a routerLink="addExp" class="nav-link">add</a>
+        </li>
+
+        <li class="nav-item pl-4">
+          <a routerLink="addExp" class="nav-link">prepare</a>
         </li>
       </ul>
     </div>
   </nav>
   
   <!-- container margin top - 3 -->
-  <div class="container mt-3"> 
+  <div class="conatainer mt-3 containerWidth"> 
     <router-outlet></router-outlet>
   </div>
 
