added and completed placementPrep comp and connected to mongodb atlas

--- a/src/app/components/view-experience/view-experience.component.html
+++ b/src/app/components/view-experience/view-experience.component.html
@@ -3,7 +3,7 @@
 
         <div class="header">
             <h1 class="cent">{{currentExperience.companyName}}</h1> 
-            <p class="cent">role : {{currentExperience.role}} | package : {{currentExperience.package}}</p>
+            <p class="cent">role : {{currentExperience.role}} | package : {{currentExperience.package}} LPA</p>
         </div>
        
        <div class="body">
