--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <nav class="navbar navbar-expand-md navbar-dark">
     <a class="navbar-brand" href="#">
-      shareExp
+      <b>shareExp</b>
     </a>
   
     <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
@@ -13,15 +13,15 @@
       
       <ul class="navbar-nav mr-auto">
         <li class="nav-item pl-4">
-          <a routerLink="expList" class="nav-link">Home</a>
+          <a routerLink="expList" class="nav-link" routerLinkActive="active">Home</a>
         </li>
   
         <li class="nav-item pl-4">
-          <a routerLink="addExp" class="nav-link">add</a>
+          <a routerLink="addExp" class="nav-link" routerLinkActive="active">add</a>
         </li>
 
         <li class="nav-item pl-4">
-          <a routerLink="addExp" class="nav-link">prepare</a>
+          <a routerLink="placementPrep" class="nav-link" routerLinkActive="active">placementPrep</a>
         </li>
       </ul>
     </div>
